Added repositories and journal service Modified application settings Persist form position

--- a/picoJournal.Application/picoJournal.ini
+++ b/picoJournal.Application/picoJournal.ini
@@ -1,4 +1,10 @@
 [General]
-UseWebApi=0
-UseAppDb=1
-WebApiUrl=asdf
+WebApiUrl=asdf-gh
+JournalDataSource=1
+QuestionsPerDay=10
+[AppPersistence]
+Top=268
+Left=194
+Width=922
+Height=643
+State=0
