--- a/picoJournal.Application/picoJournal.dproj
+++ b/picoJournal.Application/picoJournal.dproj
@@ -105,6 +105,10 @@
         <DCCReference Include="ApplicationOptions.pas"/>
         <DCCReference Include="ApplicationOptionsFactory.pas"/>
         <DCCReference Include="JournalRepository.pas"/>
+        <DCCReference Include="JournalService.pas"/>
+        <DCCReference Include="JournalServiceFactory.pas"/>
+        <DCCReference Include="ApplicationDbRepository.pas"/>
+        <DCCReference Include="WebApiRepository.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
