--- a/picoJournal.Application/picoJournal.ini
+++ b/picoJournal.Application/picoJournal.ini
@@ -1,7 +1,8 @@
 [General]
 WebApiUrl=asdf-gh
-JournalDataSource=1
-QuestionsPerDay=10
+JournalDataSource=0
+QuestionsPerDay=2
+DbConnectionString=DriverID=MSSQL;Server=(localdb)\mssqllocaldb;Database=picoJournal;Trusted_Connection=True
 [AppPersistence]
 Top=268
 Left=194
