--- a/picoJournal.Application/picoJournal.dproj
+++ b/picoJournal.Application/picoJournal.dproj
@@ -100,15 +100,22 @@
         <DCCReference Include="Options.pas">
             <Form>frmOptions</Form>
         </DCCReference>
-        <DCCReference Include="JournalEntry.pas"/>
-        <DCCReference Include="Question.pas"/>
+        <DCCReference Include="JournalEntryClass.pas"/>
+        <DCCReference Include="QuestionClass.pas"/>
         <DCCReference Include="ApplicationOptions.pas"/>
         <DCCReference Include="ApplicationOptionsFactory.pas"/>
         <DCCReference Include="JournalRepository.pas"/>
-        <DCCReference Include="JournalService.pas"/>
+        <DCCReference Include="JournalServiceClass.pas"/>
         <DCCReference Include="JournalServiceFactory.pas"/>
         <DCCReference Include="ApplicationDbRepository.pas"/>
         <DCCReference Include="WebApiRepository.pas"/>
+        <DCCReference Include="JournalDateSummaryClass.pas"/>
+        <DCCReference Include="JournalServiceInterface.pas"/>
+        <DCCReference Include="JournalEntryFrame.pas">
+            <Form>fmeJournalEntry</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -140,12 +147,27 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployClass Name="ProjectiOSDeviceResourceRules">
+                <DeployClass Name="DependencyModule">
+                    <Platform Name="Win32">
+                        <Operation>0</Operation>
+                        <Extensions>.dll;.bpl</Extensions>
+                    </Platform>
                     <Platform Name="iOSDevice64">
                         <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                    <Platform Name="OSX32">
+                        <RemoteDir>Contents\MacOS</RemoteDir>
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
                     </Platform>
                     <Platform Name="iOSDevice32">
                         <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                    <Platform Name="iOSSimulator">
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
                     </Platform>
                 </DeployClass>
                 <DeployClass Name="ProjectOSXResource">
@@ -524,27 +546,12 @@
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
-                <DeployClass Name="DependencyModule">
-                    <Platform Name="Win32">
-                        <Operation>0</Operation>
-                        <Extensions>.dll;.bpl</Extensions>
-                    </Platform>
+                <DeployClass Name="ProjectiOSDeviceResourceRules">
                     <Platform Name="iOSDevice64">
                         <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                    <Platform Name="OSX32">
-                        <RemoteDir>Contents\MacOS</RemoteDir>
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
                     </Platform>
                     <Platform Name="iOSDevice32">
                         <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                    <Platform Name="iOSSimulator">
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
                     </Platform>
                 </DeployClass>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
