Added Web Api repository and REST test form to verify Web API functionality

--- a/picoJournal.Application/picoJournal.dproj
+++ b/picoJournal.Application/picoJournal.dproj
@@ -116,6 +116,10 @@
             <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="RESTtest.pas">
+            <Form>frmRestTest</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
