--- a/picoJournal.Application/picoJournal.ini
+++ b/picoJournal.Application/picoJournal.ini
@@ -1,6 +1,6 @@
 [General]
-WebApiUrl=asdf-gh
-JournalDataSource=0
+WebApiUrl=http://localhost:51525/api
+JournalDataSource=1
 QuestionsPerDay=3
 DbConnectionString=DriverID=MSSQL;Server=(localdb)\mssqllocaldb;Database=picoJournal;Trusted_Connection=True
 [AppPersistence]
